# Bitcoin-Oil

./: .gitignore  CONTRIBUTING.md  INSTALL  Makefile.am  README.md  configure.ac  libbitcoinoilconsensus.pc.in
.tx/: config
build-aux/m4/: bitcoinoil_find_bdb48.m4  bitcoinoil_qt.m4  bitcoinoil_subdir_to_include.m4
contrib/: README.md  bitcoinoil-cli.bash-completion  bitcoinoil-qt.pro  bitcoinoil-tx.bash-completion  bitcoinoild.bash-completion  gitian-build.sh  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  bitcoinoil-qt.desktop  changelog  (+14 more)
doc/: Creating_an_OSX_DMG.md  Doxyfile  README.md  README_osx.md  README_windows.txt  REST-interface.md  benchmarking.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  npips.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
qa/: README.md
share/: setup.nsi.in
src/: BitcoinOil4-Qt.files  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addressindex.h  addrman.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bitcoinoil-cli-res.rc  bitcoinoil-cli.cpp  bitcoinoil-tx-res.rc  bitcoinoil-tx.cpp  bitcoinoild-res.rc  bitcoinoild.cpp  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.h  hash.h  (+55 more)
src/bench/: bench.h
src/compat/: endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: cfund.cpp  cfund.h  consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/mnemonic/: dictionary.h
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: BitcoinOil4.files  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  bitcoinoil.cpp  bitcoinoil.qrc  bitcoinoil_locale.qrc  bitcoinoiladdressvalidator.cpp  bitcoinoiladdressvalidator.h  bitcoinoilamountfield.cpp  bitcoinoilamountfield.h  bitcoinoilgui.cpp  bitcoinoilgui.h  bitcoinoilstrings.cpp  bitcoinoilunits.cpp  bitcoinoilunits.h  btcotechinit.cpp  btcotechinit.h  btcotechinit.ui  btcotechitem.cpp  btcotechitem.h  btcotechitem.ui  btcotechsetup.cpp  btcotechsetup.h  btcotechsetup.ui  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  coldstakingwizard.cpp  communityfundcreatepaymentrequestdialog.cpp  communityfundcreateproposaldialog.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  getaddresstoreceive.cpp  (+68 more)
src/qt/forms/: coincontroldialog.ui  communityfundcreatepaymentrequestdialog.ui  communityfundcreateproposaldialog.ui  communityfunddisplay.ui  communityfunddisplaydetailed.ui  communityfunddisplaypaymentrequest.ui  communityfunddisplaypaymentrequestdetailed.ui  communityfundpage.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  sendcommunityfunddialog.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoinoil_af.ts  bitcoinoil_af_ZA.ts  bitcoinoil_ar.ts  bitcoinoil_be_BY.ts  bitcoinoil_bg.ts  bitcoinoil_bg_BG.ts  bitcoinoil_ca.ts  bitcoinoil_ca@valencia.ts  bitcoinoil_ca_ES.ts  bitcoinoil_cs.ts  bitcoinoil_cs_CZ.ts  bitcoinoil_cy.ts  bitcoinoil_da.ts  bitcoinoil_de.ts  bitcoinoil_el.ts  bitcoinoil_el_GR.ts  bitcoinoil_en.ts  bitcoinoil_en_GB.ts  bitcoinoil_eo.ts  bitcoinoil_es.ts  bitcoinoil_es_AR.ts  bitcoinoil_es_CL.ts  bitcoinoil_es_CO.ts  bitcoinoil_es_DO.ts  bitcoinoil_es_ES.ts  bitcoinoil_es_MX.ts  bitcoinoil_es_UY.ts  bitcoinoil_es_VE.ts  bitcoinoil_et.ts  bitcoinoil_eu_ES.ts  bitcoinoil_fa.ts  bitcoinoil_fa_IR.ts  bitcoinoil_fi.ts  bitcoinoil_fr.ts  bitcoinoil_fr_CA.ts  bitcoinoil_fr_FR.ts  bitcoinoil_gl.ts  bitcoinoil_he.ts  bitcoinoil_hi_IN.ts  bitcoinoil_hr.ts  (+45 more)
src/qt/res/: bitcoinoil-qt-res.rc
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp
src/rpc/: blockchain.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: bitcoinoilconsensus.cpp  bitcoinoilconsensus.h  interpreter.h  ismine.h  script.h  script_error.h  sigcache.h  standard.cpp  standard.h
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bitcoinoil-util-test.py  blockencodings_tests.cpp  bloom_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2PKH_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  (+17 more)
src/test/data/: README.md  bitcoinoil-util-test.json
src/univalue/lib/: univalue_escapes.h
src/utils/: dns_utils.cpp
src/wallet/: btcotech.cpp  btcotech.h  crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+178 files in other folders)
